--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -1,4 +1,4 @@
-tile.ancientBlock.world.name=Ancient Block
+tile.ancientBlock.name=Ancient Block
 tile.tutorialBlock.nether.name=Nether Tutorial Block
 tile.portalTutorialBlock.name=Portal Tutorial Block
  
