Added localized block names

--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -1,10 +1,52 @@
+tile.buildingSelector.name=Selector - Buildings
+tile.spleefSelector.name=Selector - Spleef
+tile.castleSelector.name=Selector - Setup
+tile.controlRed.name=Control of Fire
+tile.controlGreen.name=Control of Life
+tile.controlBlue.name=Control of Water
+tile.controlYellow.name=Control of Decay
+tile.boostBlock.name=Booster
+tile.bounceBlock.name=Bouncer -high-
+tile.sumBlock.name=Summoner
+tile.insChest1.name=Hunger Games Chest -LV1-
+tile.insChest3.name=Hunger Games Chest -LV3-
+tile.warChest.name=War Chest
+tile.gamesSelector.name=Selector - MiniGames
+tile.hill.name=A Small Aesthetic Hill
+tile.Lv1start.name=Do Not Use This!
+tile.insChest2.name=Hunger Games Chest -LV2-
+tile.insChest4.name=Hunger Games Chest -LV4-
+tile.bounceBlockLow.name=Bouncer -low-
+tile.deadDirt.name=Dead Dirt
+tile.cottage.name=Community Creation : Pylickuz's Cottage
+tile.teleporterBlock.name=Teleporter MK1
+tile.teleporterBlock2.name=Teleporter MK2
+tile.teleporterBlock3.name=Teleporter MK3
+tile.teleporterBlock4.name=Teleporter MK4
 tile.ancientBlock.name=Ancient Block
-tile.tutorialBlock.name=Nether Tutorial Block
-tile.portalTutorialBlock.name=Portal Tutorial Block
- 
-item.tutorialItem.first.name=First Tutorial Item
-item.tutorialItem.second.name=Second Tutorial Item
- 
-entity.yourname_modname.tutorial mob.name=Tutorial Mob
+tile.presentBox.name=Present Box
+tile.spleefStone.name=Spleef Stone
+tile.badBlock.name=Doom Block
+tile.sinkSand.name=Sink Sand
+tile.fireOre.name=Firernite Ore
+tile.waterOre.name=Waternate Ore
+tile.decayOre.name=Decayenate Ore
+tile.naturalOre.name=Natralite Ore
+tile.ancientOre.name=Ancient Ore
+tile.playerTNT.name=Tech Player TNT
+tile.setSpawn.name=World Spawn Setter
+tile.classSelector.name=Class Selector
+tile.classSelectorDonator.name=Donator Class Selector
+tile.wallNS.name=Wall Piece Side
+tile.corner1.name=Wall Piece Corner
+tile.lamp.name=Small Lamp
+tile.nostalHouse.name=Easter Egg: Resinresin's very first minecraft house (Made in 1.7.3 :D)
+tile.roadPiece.name=Road Creator
+tile.tower.name=Tower
+tile.wallEnd.name=Wall Piece End
+tile.redPlate.name=Red Team Pressure Plate
+tile.bluePlate.name=Blue Team Pressure Plate
+tile.yellowPlate.name=Yellow Team Pressure Plate
+tile.greenPlate.name=Green Team Pressure Plate
 
 classselect.survival=Be In Survival When Using This GUI!
