--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -40,7 +40,8 @@ tile.classSelectorDonator.name=Donator Class Selector
 tile.wallNS.name=Wall Piece Side
 tile.corner1.name=Wall Piece Corner
 tile.lamp.name=Small Lamp
-tile.nostalHouse.name=Easter Egg: Resinresin's very first minecraft house (Made in 1.7.3 :D)
+tile.nostalHouse.name=Easter Egg: Resinresin's very first minecraft house (Made in Beta 1.7.3 :D)
+tile.fireNostalHouse.name=Easter Egg: The_Fireplace's very first minecraft house (Made in 1.4.7)
 tile.roadPiece.name=Road Creator
 tile.tower.name=Tower
 tile.wallEnd.name=Wall Piece End
