Localize item names

--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -50,4 +50,57 @@ tile.bluePlate.name=Blue Team Pressure Plate
 tile.yellowPlate.name=Yellow Team Pressure Plate
 tile.greenPlate.name=Green Team Pressure Plate
 
+item.ancientGem.name=Ancient Gem
+item.ancientEmblem.name=Ancient Emblem
+item.magicPotato.name=Magical Potato -healer-
+item.shadowFlesh.name=Shadow Flesh -scout-
+item.warCheese.name=War Cheese -knight-
+item.battleBurger.name=Battle Burger -guard-
+item.longRangeBanana.name=Long Range Banana -archer-
+item.workWaffel.name=Work Waffle -tech-
+item.scoutSword.name=Scout Blade
+item.guardSword.name=Guard Sword
+item.knightSword.name=Knight Sword
+item.wizardStaff.name=Wizard Staff
+item.ArcherBow.name=Archer Bow
+item.techSpanner.name=Tech Spanner
+item.dagger.name=Dagger
+item.chaosSword.name=Chaos Sword
+item.scoutHelm.name=Scout Hood
+item.scoutChest.name=Scout Tunic
+item.scoutLegs.name=Scout Leggings
+item.techHelm.name=Tech Helmet
+item.techChest.name=Tech Dungerees
+item.techLegs.name=Tech Trousers
+item.healerHelm.name=Healer Hood
+item.healerChest.name=Healer Cloak
+item.healerLegs.name=Healer Leggings
+item.archerHelm.name=Archer Hood
+item.archerChest.name=Archer Tunic
+item.archerLegs.name=Archer Leggings
+item.knightHelm.name=Knight Helm
+item.knightChest.name=Knight Chestplate
+item.knightLegs.name=Knight Leggings
+item.guardHelm.name=Guard Helm
+item.guardChest.name=Guard Chestplate
+item.guardLegs.name=Guard Trousers
+item.chaosHelm.name=Chaos Warrior Helm
+item.chaosChest.name=Chaos Warrior Chestplate
+item.chaosLegs.name=Chaos Warrior Leggings
+item.redBoots.name=Red Team Boots
+item.greenBoots.name=Green Team Boots
+item.yellowBoots.name=Yellow Team Boots
+item.blueBoots.name=Blue Team Boots
+item.chaosBoots.name=Chaos Warrior Boots
+item.waterGem.name=Wateite Gem
+item.fireGem.name=Fireite Gem
+item.decayGem.name=Decanite Gem
+item.naturalGem.name=Natrite Gem
+item.aWandTNT.name=Admin Wand - TNT
+item.aWandBall.name=Admin Wand - Fireballs
+item.aWandStone.name=Admin Wand - Stone Thrower
+item.aWandWeb.name=Admin Wand - Web Thrower
+item.aWandLight.name=Admin Wand - Smiting
+item.antidote.name=Antidote
+
 classselect.survival=Be In Survival When Using This GUI!
