Finish up Ninja. Closes #14

--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -87,6 +87,12 @@ item.guardLegs.name=Guard Trousers
 item.chaosHelm.name=Chaos Warrior Helm
 item.chaosChest.name=Chaos Warrior Chestplate
 item.chaosLegs.name=Chaos Warrior Leggings
+item.enderHelm.name=Ender Knight Helm
+item.enderChest.name=Ender Knight Chestplate
+item.enderLegs.name=Ender Knight Leggings
+item.ninjaHelm.name=Ninja Hood
+item.ninjaChest.name=Ninja Tunic
+item.ninjaLegs.name=Ninja Leggings
 item.redBoots.name=Red Team Boots
 item.greenBoots.name=Green Team Boots
 item.yellowBoots.name=Yellow Team Boots
@@ -103,6 +109,7 @@ item.aWandWeb.name=Admin Wand - Web Thrower
 item.aWandLight.name=Admin Wand - Smiting
 item.antidote.name=Antidote
 item.enderSword.name=Ender Knight Sword
+item.ninjaSword.name=Ninja Sword
 
 itemGroup.tabWarsBlocks=Wars Mod Blocks
 itemGroup.tabWarsItems=Wars Mod Items
