Add buycraft link

--- a/src/main/resources/assets/warsmod/lang/en_US.lang
+++ b/src/main/resources/assets/warsmod/lang/en_US.lang
@@ -289,4 +289,4 @@ needteamboots=§3WEAR TEAM BOOTS TO USE CLASS!
 key.warsmod.category=Wars Mod
 key.killcounter.desc=Toggle Killstreak HUD
 
-class.donatoronly=§3Donater Only Class! §2Donate ($5+) @ [TODO new link] and email your username to the.f1repl4ce@gmail.com
+class.donatoronly=§3Donater Only Class! §2Donate ($5+) @ http://resinresin.buycraft.net and email your username to the.f1repl4ce@gmail.com
